# eplay

./: Makefile.am  configure.ac  eplay.h  gui.c  input.c  kmsplayer.c  main.c  media.c  mixer.c  output.c
